--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,18 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: 7.0
 
 install:
   - travis_retry composer self-update
-  - travis_retry composer update --no-interaction
+  - travis_retry composer install --prefer-dist --no-interaction
+  - travis_retry composer global require "codeception/codeception=2.0.*" "codeception/specify=*" "codeception/verify=*"
 
 script:
-  - vendor/bin/codecept run
+  - codecept build && codecept run
