--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
 install:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-dist --no-interaction
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer global require "codeception/codeception=2.0.*" "codeception/specify=*" "codeception/verify=*"
 
 script:
