Fix package description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "pahanini/yii2-curl",
-	"description": "A Yii2 cURL library with support of multiple requests.",
+	"description": "A Yii2 cURL library with support of multiple requests",
 	"keywords": ["yii2", "curl"],
 	"homepage": "https://github.com/pahanini/yii2-curl",
 	"type": "yii2-extension",
