--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	"require": {
 		"php": ">=5.4.0",
 		"ext-curl": "*",
-		"yiisoft/yii2": "*"
+		"cebe/assetfree-yii2": "~2.0.13"
 	},
 	"autoload": {
 		"psr-4": {
